--- a/Tetris cpp/Tetris cpp.vcxproj
+++ b/Tetris cpp/Tetris cpp.vcxproj
@@ -131,6 +131,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Button.cpp" />
+    <ClCompile Include="ConstElements.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainLoop.cpp" />
@@ -139,6 +141,8 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Button.h" />
+    <ClInclude Include="ConstElements.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="MainLoop.h" />
     <ClInclude Include="MainMenu.h" />
