--- a/Tetris cpp/Tetris cpp.vcxproj
+++ b/Tetris cpp/Tetris cpp.vcxproj
@@ -134,10 +134,13 @@
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="BlockFactory.cpp" />
     <ClCompile Include="BlockLong.cpp" />
+    <ClCompile Include="BlockS.cpp" />
+    <ClCompile Include="BlockSquare.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="ConstElements.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameBoard.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainLoop.cpp" />
@@ -149,10 +152,13 @@
     <ClInclude Include="Block.h" />
     <ClInclude Include="BlockFactory.h" />
     <ClInclude Include="BlockLong.h" />
+    <ClInclude Include="BlockS.h" />
+    <ClInclude Include="BlockSquare.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="ConstElements.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameBoard.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="MainLoop.h" />
     <ClInclude Include="MainMenu.h" />
